# bevy_test

./: Cargo.toml  README.md
assets/shaders/: cubes.wgsl  particles.wgsl
examples/: cube_stress.rs  sprite_stress.rs
src/: main.rs
